// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mxlToChordProgression > converts MXL with the correct key and mode 1`] = `
[
  {
    "children": [
      {
        "key": {
          "fifths": -3,
          "mode": "minor",
          "type": "Key",
        },
        "time": {
          "beatType": 4,
          "beats": 4,
          "type": "Time",
        },
        "type": "Attributes",
      },
      {
        "kind": "half-diminished",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "D",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 1,
    "type": "Measure",
  },
  {
    "children": [
      {
        "kind": "dominant",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "G",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 2,
    "type": "Measure",
  },
  {
    "children": [
      {
        "kind": "minor-sixth",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "C",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 3,
    "type": "Measure",
  },
  {
    "children": [],
    "number": 4,
    "type": "Measure",
  },
]
`;

exports[`mxlToChordProgression > converts a parsed element tree to a chord progression 1`] = `
[
  {
    "children": [
      {
        "key": {
          "fifths": 0,
          "type": "Key",
        },
        "time": {
          "beatType": 4,
          "beats": 4,
          "type": "Time",
        },
        "type": "Attributes",
      },
      {
        "kind": "minor-seventh",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "D",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 1,
    "type": "Measure",
  },
  {
    "children": [
      {
        "kind": "dominant",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "G",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 2,
    "type": "Measure",
  },
  {
    "children": [
      {
        "kind": "major-seventh",
        "offset": 0,
        "root": {
          "alter": 0,
          "step": "C",
          "type": "Root",
        },
        "type": "Harmony",
      },
    ],
    "number": 3,
    "type": "Measure",
  },
  {
    "children": [],
    "number": 4,
    "type": "Measure",
  },
]
`;
